--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,41 @@
 
 .header {
-    background-color: black;
     height: 70px;
     width: 1800px;
     padding: 0px;
-
 }
-#navy {
-    width: 100px;
-    color: #fff;
-    font-weight: bold;
+.top-menu
+{
+	background-color: #c3a67e;
+	overflow: hidden;
+}
+.top-menu li
+{
+	list-style-type: none;
+	float: left;
+	border-right: solid 1px #fff;
+	padding: 6px 10px;
+}
+.top-menu li a
+{
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #fff;
+	font-weight: bold;
+	padding: 6px 10px;
+}
+.top-menu li:hoover
+{
+	background:#ac4f2e;
+}
+.top-menu li.active
+
+    background: #c60;
 }
 .logo{
     position: absolute;
     color: #fff;
-  
+
     font-size: 2.1rem;
     padding: 0;
 }
